[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/new_theme.theme" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
tab_align = 0

[node name="World" type="Tabs" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/World"]
margin_top = 2.0
margin_right = 382.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/World/VBoxContainer"]
margin_right = 402.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer"]
margin_right = 121.0
margin_bottom = 22.0
text = "Map Size: (x/y)"

[node name="mapsizex" type="LineEdit" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer"]
margin_left = 131.0
margin_right = 215.0
margin_bottom = 23.0
max_length = 10

[node name="mapsizey" type="LineEdit" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 309.0
margin_bottom = 23.0
max_length = 10

[node name="ButtonWorld" type="Button" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer"]
margin_left = 319.0
margin_right = 402.0
margin_bottom = 23.0
text = "Generate"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/World/VBoxContainer"]
margin_top = 33.0
margin_right = 402.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer2"]
margin_right = 133.0
margin_bottom = 22.0
text = "Max Water Point:"

[node name="waterpoint" type="LineEdit" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer2"]
margin_left = 143.0
margin_right = 227.0
margin_bottom = 22.0
max_length = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TabContainer/World/VBoxContainer"]
margin_top = 65.0
margin_right = 402.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer3"]
margin_right = 126.0
margin_bottom = 22.0
text = "Max Land Point:"

[node name="landpoint" type="LineEdit" parent="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer3"]
margin_left = 136.0
margin_right = 220.0
margin_bottom = 22.0
max_length = 10

[node name="Tree\'s" type="Tabs" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/TabContainer/Tree\'s"]
margin_right = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2"]
margin_right = 331.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer"]
margin_right = 123.0
margin_bottom = 22.0
text = "Max Tree Point:"

[node name="treepoint" type="LineEdit" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer"]
margin_left = 133.0
margin_right = 217.0
margin_bottom = 23.0
max_length = 10

[node name="ButtonTrees" type="Button" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer"]
margin_left = 227.0
margin_right = 300.0
margin_bottom = 23.0
text = "Genrate"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2"]
margin_top = 33.0
margin_right = 331.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 22.0
text = "from:"

[node name="treefrom" type="LineEdit" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer2"]
margin_left = 57.0
margin_right = 141.0
margin_bottom = 22.0
max_length = 10

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer2"]
margin_left = 151.0
margin_right = 189.0
margin_bottom = 22.0
text = "Till:"

[node name="Label3" type="Label" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer2"]
margin_left = 199.0
margin_right = 237.0
margin_bottom = 22.0
text = "Till:"

[node name="treetill" type="LineEdit" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer2"]
margin_left = 247.0
margin_right = 331.0
margin_bottom = 22.0
max_length = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2"]
margin_top = 65.0
margin_right = 331.0
margin_bottom = 87.0

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer3"]
margin_right = 122.0
margin_bottom = 22.0
text = "Chance(0-100):"

[node name="treechance" type="LineEdit" parent="VBoxContainer/TabContainer/Tree\'s/VBoxContainer2/HBoxContainer3"]
margin_left = 132.0
margin_right = 216.0
margin_bottom = 22.0
max_length = 10

[node name="Grass" type="Tabs" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Grass"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TabContainer/Grass/VBoxContainer"]
margin_right = 318.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer3"]
margin_right = 131.0
margin_bottom = 22.0
text = "Max Grass Point:"

[node name="grasspoint" type="LineEdit" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer3"]
margin_left = 141.0
margin_right = 225.0
margin_bottom = 23.0
max_length = 10

[node name="ButtonGrass" type="Button" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer3"]
margin_left = 235.0
margin_right = 318.0
margin_bottom = 23.0
text = "Generate"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/TabContainer/Grass/VBoxContainer"]
margin_top = 33.0
margin_right = 318.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer4"]
margin_right = 47.0
margin_bottom = 22.0
text = "from:"

[node name="grassfrom" type="LineEdit" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer4"]
margin_left = 57.0
margin_right = 141.0
margin_bottom = 22.0
max_length = 10

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer4"]
margin_left = 151.0
margin_right = 189.0
margin_bottom = 22.0
text = "Till:"

[node name="grasstill" type="LineEdit" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer4"]
margin_left = 199.0
margin_right = 283.0
margin_bottom = 22.0
max_length = 10

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/TabContainer/Grass/VBoxContainer"]
margin_top = 65.0
margin_right = 318.0
margin_bottom = 87.0

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer5"]
margin_right = 122.0
margin_bottom = 22.0
text = "Chance(0-100):"

[node name="grasschance" type="LineEdit" parent="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer5"]
margin_left = 132.0
margin_right = 216.0
margin_bottom = 22.0
max_length = 10

[node name="Bushes" type="Tabs" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/TabContainer/Bushes"]
margin_right = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4"]
margin_right = 537.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer5"]
margin_right = 121.0
margin_bottom = 22.0
text = "Min Bush Point:"

[node name="bushpoint2" type="LineEdit" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer5"]
margin_left = 131.0
margin_right = 215.0
margin_bottom = 23.0
max_length = 10

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer5"]
margin_left = 225.0
margin_right = 350.0
margin_bottom = 22.0
text = "Max Bush Point:"

[node name="bushpoint" type="LineEdit" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer5"]
margin_left = 360.0
margin_right = 444.0
margin_bottom = 23.0
max_length = 10

[node name="ButtonBushes" type="Button" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer5"]
margin_left = 454.0
margin_right = 537.0
margin_bottom = 23.0
text = "Generate"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4"]
margin_top = 33.0
margin_right = 537.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 22.0
text = "from:"

[node name="bushfrom" type="LineEdit" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer2"]
margin_left = 57.0
margin_right = 141.0
margin_bottom = 22.0
max_length = 10

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer2"]
margin_left = 151.0
margin_right = 189.0
margin_bottom = 22.0
text = "Till:"

[node name="bushtill" type="LineEdit" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer2"]
margin_left = 199.0
margin_right = 283.0
margin_bottom = 22.0
max_length = 10

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4"]
margin_top = 65.0
margin_right = 537.0
margin_bottom = 87.0

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer6"]
margin_right = 122.0
margin_bottom = 22.0
text = "Chance(0-100):"

[node name="bushchance" type="LineEdit" parent="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer6"]
margin_left = 132.0
margin_right = 216.0
margin_bottom = 22.0
max_length = 10

[node name="Rocks" type="Tabs" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/TabContainer/Rocks"]
margin_right = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6"]
margin_right = 539.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer6"]
margin_right = 122.0
margin_bottom = 22.0
text = "Min Rock Point:"

[node name="rockpoint2" type="LineEdit" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer6"]
margin_left = 132.0
margin_right = 216.0
margin_bottom = 23.0
max_length = 10

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer6"]
margin_left = 226.0
margin_right = 352.0
margin_bottom = 22.0
text = "Max Rock Point:"

[node name="rockpoint" type="LineEdit" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer6"]
margin_left = 362.0
margin_right = 446.0
margin_bottom = 23.0
max_length = 10

[node name="ButtonRocks" type="Button" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer6"]
margin_left = 456.0
margin_right = 539.0
margin_bottom = 23.0
text = "Generate"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6"]
margin_top = 33.0
margin_right = 539.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 22.0
text = "from:"

[node name="rockfrom" type="LineEdit" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer2"]
margin_left = 57.0
margin_right = 141.0
margin_bottom = 22.0
max_length = 10

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer2"]
margin_left = 151.0
margin_right = 189.0
margin_bottom = 22.0
text = "Till:"

[node name="rocktill" type="LineEdit" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer2"]
margin_left = 199.0
margin_right = 283.0
margin_bottom = 22.0
max_length = 10

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6"]
margin_top = 65.0
margin_right = 539.0
margin_bottom = 87.0

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer7"]
margin_right = 122.0
margin_bottom = 22.0
text = "Chance(0-100):"

[node name="rockchance" type="LineEdit" parent="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer7"]
margin_left = 132.0
margin_right = 216.0
margin_bottom = 22.0
max_length = 10

[node name="Animals" type="Tabs" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/TabContainer/Animals"]
margin_right = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6"]
margin_right = 329.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer6"]
margin_right = 142.0
margin_bottom = 22.0
text = "*Pre-alpha feature*"

[node name="rockpoint" type="LineEdit" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer6"]
visible = false
margin_left = 152.0
margin_right = 236.0
margin_bottom = 23.0
max_length = 10

[node name="ButtonAnimals" type="Button" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer6"]
margin_left = 152.0
margin_right = 235.0
margin_bottom = 23.0
text = "Generate"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6"]
visible = false
margin_top = 32.0
margin_right = 313.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 22.0
text = "from:"

[node name="rockfrom" type="LineEdit" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer2"]
margin_left = 57.0
margin_right = 141.0
margin_bottom = 22.0
max_length = 10

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer2"]
margin_left = 151.0
margin_right = 189.0
margin_bottom = 22.0
text = "Till:"

[node name="rocktill" type="LineEdit" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer2"]
margin_left = 199.0
margin_right = 283.0
margin_bottom = 22.0
max_length = 10

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6"]
visible = false
margin_top = 32.0
margin_right = 313.0
margin_bottom = 54.0

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer7"]
margin_right = 122.0
margin_bottom = 22.0
text = "Chance(0-100):"

[node name="rockchance" type="LineEdit" parent="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer7"]
margin_left = 132.0
margin_right = 216.0
margin_bottom = 22.0
max_length = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -156.0
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Button" parent="VBoxContainer2"]
margin_right = 156.0
margin_bottom = 23.0
text = "Spawn Player"

[node name="WorldCamera" type="Button" parent="VBoxContainer2"]
margin_top = 33.0
margin_right = 156.0
margin_bottom = 56.0
text = "World Camera"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2"]
margin_top = 66.0
margin_right = 156.0
margin_bottom = 89.0
text = "Rotate World"
align = 1

[node name="GenerateWorld" type="Button" parent="VBoxContainer2"]
margin_top = 99.0
margin_right = 156.0
margin_bottom = 122.0
text = "Greate new World"

[node name="Ntree" type="Label" parent="VBoxContainer2"]
margin_top = 132.0
margin_right = 156.0
margin_bottom = 154.0
text = "N"

[node name="Ngrass" type="Label" parent="VBoxContainer2"]
margin_top = 164.0
margin_right = 156.0
margin_bottom = 186.0
text = "U"

[node name="Nbush" type="Label" parent="VBoxContainer2"]
margin_top = 196.0
margin_right = 156.0
margin_bottom = 218.0
text = "L"

[node name="Nrock" type="Label" parent="VBoxContainer2"]
margin_top = 228.0
margin_right = 156.0
margin_bottom = 250.0
text = "L"

[node name="InteractionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -21.0
text = "WELLCOME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItsA" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 167.0
margin_bottom = 49.0
text = "SUP!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leave" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 56.816
margin_right = 167.0
margin_bottom = 115.816
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.5
margin_right = 25.5
margin_bottom = 22.0
text = "v1.1.4"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/TabContainer/World/VBoxContainer/HBoxContainer/ButtonWorld" to="." method="_on_ButtonWorld_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Tree's/VBoxContainer2/HBoxContainer/ButtonTrees" to="." method="_on_ButtonTrees_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Grass/VBoxContainer/HBoxContainer3/ButtonGrass" to="." method="_on_ButtonGrass_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Bushes/VBoxContainer4/HBoxContainer5/ButtonBushes" to="." method="_on_ButtonBushes_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Rocks/VBoxContainer6/HBoxContainer6/ButtonRocks" to="." method="_on_ButtonRocks_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Animals/VBoxContainer6/HBoxContainer6/ButtonAnimals" to="." method="_on_ButtonAnimals_pressed"]
[connection signal="pressed" from="VBoxContainer2/Player" to="." method="_on_Player_pressed"]
[connection signal="pressed" from="VBoxContainer2/WorldCamera" to="." method="_on_WorldCamera_pressed"]
[connection signal="pressed" from="VBoxContainer2/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="VBoxContainer2/GenerateWorld" to="." method="_on_GenerateWorld_pressed"]
